17419
```scala
object Test extends App {
  implicit val m1 = classManifest[Int]
  implicit val m2 = classManifest[String]
  println(classManifest[List[_]])
  // same bug happens for: println(classManifest[List[Any]])
}
```
```scala
C:\Projects\Kepler\sandbox @ ticket/6329>myke compile Test.scala
Test.scala:7: error: ambiguous implicit values:
 both value m1 in object Test of type => ClassManifest[Int]
 and value m2 in object Test of type => ClassManifest[String]
 match expected type scala.reflect.OptManifest[Any]
  println(classManifest[List[Any]])
                       ^
one error found
```
